--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -55,7 +55,7 @@
           <div class="text-3">A Popular Will Generator</div>
           <div class="text-3">We are <span class="typing"></span></div>
           <div>
-            <a href="#"><i class="fas fa-pen-fancy"></i> Get Started</a>
+            <a href="./form.html"><i class="fas fa-pen-fancy"></i> Get Started</a>
             <button id="modalBtn" data-toggle="modal" data-target="#loginModal"><i class="fas fa-sign-in-alt"></i></i> Login</button>
           </div>  
         </div>
